results/slurm/ppo_mcts_c5_gpu_33757547.out
Traceback (most recent call last):
  File "/usr/lib64/python3.6/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/usr/lib64/python3.6/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/mmfs1/gscratch/stf/rpande/AI_Lab/PolyArithmeticCircuitsRL/src/main.py", line 18, in <module>
    from .algorithms.sac import SACTrainer
  File "/mmfs1/gscratch/stf/rpande/AI_Lab/PolyArithmeticCircuitsRL/src/algorithms/sac.py", line 14
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
